fix(island): void click collapse + marquee restart guard

--- a/static/css/island.css
+++ b/static/css/island.css
@@ -24,7 +24,6 @@
 #island-container {
   position: fixed; top: 0; left: 0;
   width: 100vw; height: 100vh;
-  pointer-events: none;
   z-index: 2147483647;
 }
 
